# datafusion-java

./: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml  java.yml  java_release.yml  release.yml  rust.yml
buildSrc/: build.gradle
buildSrc/src/main/groovy/: datafusion.java-conventions.gradle
datafusion-examples/: build.gradle
datafusion-examples/src/main/resources/: test_table.csv
datafusion-java/: build.gradle  write_test_files.py
datafusion-java/src/main/java/org/apache/arrow/datafusion/: AbstractProxy.java  ArrowFormat.java  CsvFormat.java  DataFrame.java  DataFrames.java  DefaultDataFrame.java  DefaultExecutionContext.java  DefaultRecordBatch.java  DefaultRecordBatchStream.java  DefaultSessionContext.java  DefaultTableProvider.java  ErrorUtil.java  ExecutionContexts.java  ExecutionOptions.java  FileFormat.java  FileFormats.java  JNILoader.java  ListingOptions.java  (+15 more)
datafusion-java/src/test/resources/: dictionary_data.parquet
datafusion-jni/: Cargo.toml
datafusion-jni/src/: context.rs  dataframe.rs  file_formats.rs  lib.rs  listing_options.rs  listing_table.rs  listing_table_config.rs  runtime.rs  session_config.rs  stream.rs  table_provider.rs  util.rs
datafusion_examples/: build.gradle
datafusion_examples/src/main/resources/: aggregate_test_100.parquet
datafusion_java/: build.gradle
datafusion_jni/: Cargo.toml
datafusion_jni/src/: context.rs  lib.rs  runtime.rs
examples/: build.gradle
lib/: build.gradle
src/main/java/org/apache/arrow/datafusion/: DefaultExecutionContext.java
(+23 files in other folders)
