[package]
name = "datafusion_jni"
version = "0.3.0"
homepage = "https://github.com/apache/arrow-datafusion"
repository = "https://github.com/apache/arrow-datafusion"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
description = "Build and run queries against data"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
jni = "^0.19.0"
tokio = "^1.12.0"
arrow = "^6.0"
datafusion = "^6.0"

[lib]
crate_type = ["cdylib"]
